force-app/main/default/objects/VCG_CPQ_Pricing_Procedure_Sequence__c/VCG_CPQ_Pricing_Procedure_Sequence__c.object-meta.xml
<CustomObject>
    <label>VCG CPQ Pricing Procedure Sequence</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VCG CPQ Pricing Procedure Sequences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>