force-app/main/default/objects/VCG_CPQ_Pricing_Procedure_Sequence__c/fields/Access_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Access_Sequence__c</fullName>
    <label>Access Sequence</label>
    <referenceTo>VCG_CPQ_Pricing_Access_Sequence__c</referenceTo>
    <relationshipLabel>Procedure Sequences</relationshipLabel>
    <relationshipName>Procedure_Sequences</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>