force-app/main/default/objects/VCG_CPQ_Pricing_Procedure_Sequence__c/fields/Pricing_Procedure__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Procedure__c</fullName>
    <label>Pricing Procedure</label>
    <referenceTo>VCG_CPQ_Pricing_Procedure__c</referenceTo>
    <relationshipLabel>Procedure Sequences</relationshipLabel>
    <relationshipName>Procedure_Sequences</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>