force-app/main/default/objects/VCG_CPQ_Pricing_Procedure_Sequence__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <inlineHelpText>The sort order for processing the Access Sequences</inlineHelpText>
    <label>Sequence</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>